Configure nav and footer

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
           <a
             class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-nowrap uppercase text-white"
             href="/"
-            >Cookie</a
+            >Anubis</a
           ><button
             class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none"
             type="button"
@@ -36,6 +36,7 @@
             </li>
           </ul>
           <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
+            <!--
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
@@ -46,10 +47,11 @@
                 ><span class="lg:hidden inline-block ml-2">Share</span></a
               >
             </li>
+            //-->
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://twitter.com/abhinav"
+                href="https://twitter.com/anubis"
                 ><i
                   class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg "
                 ></i
@@ -59,13 +61,14 @@
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://github.com/abhinavs/cookie"
+                href="https://github.com/anubis-rs"
                 ><i
                   class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "
                 ></i
                 ><span class="lg:hidden inline-block ml-2">Star</span></a
               >
             </li>
+            <!--
             <li class="flex items-center">
               <button
                 class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
@@ -75,6 +78,7 @@
                 <i class="fas fa-arrow-alt-circle-right"></i> Sign Up
               </button>
             </li>
+            //-->
           </ul>
         </div>
       </div>
