--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,8 +35,11 @@
           <a
             href="/"
             class="text-gray-600 hover:text-gray-900"
-            >Company-XXX</a
-          > &nbsp; • &nbsp; <a href="https://icons8.com/icon/97693/cookie" target="_blank" rel="noreferrer">Cookie icon by Icons8</a>
+            >Anubis</a
+          > &nbsp; • &nbsp; 
+          <!-- 
+          <a href="https://icons8.com/icon/97693/cookie" target="_blank" rel="noreferrer">Cookie icon by Icons8</a>
+          //-->
         </div>
       </div>
       <div class="w-full lg:w-6/12 px-4">
@@ -64,7 +67,7 @@
               <li>
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                  href="https://www.github.com/abhinavs"
+                  href="https://www.github.com/anubis-rs"
                   >Github</a
                 >
               </li>
@@ -79,10 +82,11 @@
               <li>
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                  href="https://github.com/abhinavs/cookie/blob/master/LICENSE.md"
+                  href="https://github.com/anubis-rs/Anubis-Website/blob/master/LICENSE.md"
                   >MIT License</a
                 >
               </li>
+              <!--
               <li>
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
@@ -97,6 +101,7 @@
                   >Privacy Policy</a
                 >
               </li>
+              //-->
               <li>
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
@@ -115,7 +120,7 @@
     >
       <div class="w-full px-4 mx-auto text-center">
         <div class="text-sm text-gray-600">
-            Powered by <a class="hover:text-indigo-600 font-semibold" href="https://www.soopr.co" target="_blank" rel="noreferrer">Soopr</a>
+            Powered by <a class="hover:text-indigo-600 font-semibold" href="https://pages.github.com" target="_blank" rel="noreferrer">GitHub Pages</a>
             &nbsp;
             •
             &nbsp;
