Remove annoying dot

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
             href="/"
             class="text-gray-600 hover:text-gray-900"
             >Anubis</a
-          > &nbsp; • &nbsp; 
+          > &nbsp; 
           <!-- 
           <a href="https://icons8.com/icon/97693/cookie" target="_blank" rel="noreferrer">Cookie icon by Icons8</a>
           //-->
