--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,31 +4,26 @@
     <div class="flex flex-wrap">
       <div class="w-full lg:w-5/12 px-4">
         <h4 class="text-3xl font-semibold">Let's keep in touch!</h4>
+        <!--
         <h5 class="text-lg mt-0 mb-2 text-gray-700">
           Find us on any of these platforms, we respond 1-2 business days.
         </h5>
+        -->
         <div class="mt-6">
           <button
             class="bg-white text-blue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
             type="button"
           >
             <i class="flex fab fa-twitter"></i></button
-          ><button
-            class="bg-white text-blue-600 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
-            type="button"
           >
-            <i class="flex fab fa-facebook-square"></i></button
-          ><button
-            class="bg-white text-pink-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
-            type="button"
-          >
-            <i class="flex fab fa-dribbble"></i></button
-          ><button
-            class="bg-white text-gray-900 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
-            type="button"
-          >
-            <i class="flex fab fa-github"></i>
-          </button>
+          <a href="https://github.com/anubis-rs">
+            <button
+              class="bg-white text-gray-900 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
+              type="button"
+            >
+              <i class="flex fab fa-github"></i>
+            </button>
+          </a>
         </div>
         <div class="text-gray-600 text-sm py-1 mt-4">
           Copyright © 2021
